AWS Docker test mode was updated.